--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8" />
     <title>Food Social Project</title>
   </head>
-  <style></style>
   <body>
     <div id="root"></div>
 
     <!-- script for webpack and webpack-dev-server challenge -->
-    <script src="build/bundle.js"></script>
+    <script src="bundle.js"></script>
+    <h1>Hello from client html</h1>
   </body>
 </html>
