--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="app"></div>
 
     <!-- script for webpack and webpack-dev-server challenge -->
     <script src="bundle.js"></script>
