--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <div id="root"></div>
 
     <!-- script for webpack and webpack-dev-server challenge -->
-    <script src="bundle.js"></script>
-    <h1>Hello from client html</h1>
+    <!-- <script src="bundle.js"></script>
+    <h1>Hello from client html</h1> -->
   </body>
 </html>
