some basic styling on login page

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&family=M+PLUS+1p:wght@300;400&display=swap" rel="stylesheet">
     <title>Food Social Project</title>
   </head>
   <body>
